✨ Feat: enhance redis demo